# spence

./: .editorconfig  .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
bindings/: CMakeLists.txt
bindings/python/: engine.cpp  module.cpp  player.cpp  track.cpp
client/: __init__.py  errors.py
client/api/: __init__.py  filters.py  node.py  player.py  queue.py  track.py
client/bridge/: __init__.py  core.py  native.pyi
client/discord/: __init__.py  adapter.py  transport.py  voice.py
client/resolve/: __init__.py  base.py  cache.py  registry.py  router.py
client/resolve/applemusic/: init.py  matcher.py  resolver.py
client/resolve/common/: errors.py  http.py  ratelimit.py
client/resolve/deezer/: __init__.py  matcher.py  resolver.py
client/resolve/soundcloud/: client.py  init.py  resolver.py
client/resolve/spotify/: auth.py  init.py  matcher.py  resolver.py
client/resolve/youtube/: formats.py  init.py  resolver.py  search.py  signature.py
client/utils/: asyncutil.py  log.py
docs/: api.md  architecture.md  engine.md  resolvers.md
examples/: basic.py  discord.py  filters.py  spotify.py
native/: CMakeLists.txt
native/include/spence/: api.h  engine.h  node.h  player.h  track.h
native/include/spence/audio/: decoder.h  encoder.h  filter.h  frame.h  resampler.h
native/include/spence/extract/: mp4.h  webm.h  youtube.h
native/include/spence/stream/: opusstream.h  ringbuffer.h  rtppacket.h
native/src/: api.cpp  engine.cpp  node.cpp  player.cpp  track.cpp
native/src/audio/: decoder.cpp  encoder.cpp  filter.cpp  resampler.cpp
native/src/extract/: mp4.cpp  webm.cpp  youtube.cpp
native/src/stream/: opusstream.cpp  rtppacket.cpp
tools/: benchmark.py  build.py  loadtest.py
